add tc-config file and changed the ehcache.xml to be clustered