@@ -1,44 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.ehcache</groupId>
   <artifactId>hibernate-ehcache-4</artifactId>
   <version>4.3-SNAPSHOT</version>
 
+  <properties>
+    <java.args>-Xms1g -Xmx1g -XX:MaxDirectMemorySize=1g -XX:PermSize=384m -XX:MaxPermSize=384m -server</java.args>
+    <server.jvmargs>-Xms1g -Xmx1g -XX:MaxDirectMemorySize=2g -XX:PermSize=256m -XX:MaxPermSize=256m -Dlogs.path=${project.build.directory} -server -verbose:gc</server.jvmargs>
+  </properties>
+
   <dependencies>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-testing</artifactId>
+      <version>4.3.8.Final</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.3.176</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>4.3.8.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>2.10.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.7</version>
+    </dependency>
       <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-testing</artifactId>
-         <version>4.3.8.Final</version>
-         <scope>test</scope>
+          <groupId>org.terracotta</groupId>
+          <artifactId>terracotta-toolkit-runtime</artifactId>
+          <version>4.3.0-SNAPSHOT</version>
       </dependency>
-      <dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
-          <version>1.3.176</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>log4j</groupId>
-          <artifactId>log4j</artifactId>
-          <version>1.2.17</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-core</artifactId>
-         <version>4.3.8.Final</version>
-      </dependency>
-      <dependency>
-          <groupId>net.sf.ehcache</groupId>
-          <artifactId>ehcache</artifactId>
-          <version>2.10.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>1.7.7</version>
-      </dependency>
-   </dependencies>
+  </dependencies>
+
+  <profiles>
+    <profile>
+      <id>tc</id>
+      <build>
+        <plugins>
+          <plugin>
+          <groupId>org.terracotta.maven.plugins</groupId>
+          <artifactId>tc-maven-plugin</artifactId>
+          <dependencies>
+              <dependency>
+                  <groupId>org.terracotta</groupId>
+                  <artifactId>terracotta</artifactId>
+                  <version>4.3.0-SNAPSHOT</version>
+              </dependency>
+              <dependency>
+                  <groupId>net.sf.ehcache</groupId>
+                  <artifactId>ehcache</artifactId>
+                  <version>2.10.0-SNAPSHOT</version>
+              </dependency>
+          </dependencies>
+          <executions>
+            <execution>
+              <id>server1start</id>
+              <phase>process-test-resources</phase>
+              <configuration>
+                <jvmargs>${server.jvmargs}</jvmargs>
+                <config>${basedir}/src/test/resources/tc-config.xml</config>
+                <serverName>Server1</serverName>
+              </configuration>
+              <goals>
+                <goal>start</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>server1stop</id>
+              <phase>post-integration-test</phase>
+              <configuration>
+                <jvmargs>${server.jvmargs}</jvmargs>
+                <config>${basedir}/src/test/resources/tc-config.xml</config>
+                <serverName>Server1</serverName>
+              </configuration>
+              <goals>
+                <goal>stop</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <config>${basedir}/src/test/resources/tc-config.xml</config>
+            <startServer>false</startServer>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
+    </profile>
+  </profiles>
 </project>
